mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  labels:
    name: mysql-ingress
spec:
  rules:
    - host: mysql.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: mysql-h
                port:
                  number: 3306
